--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -28,7 +28,25 @@
         Una vez que domines los fundamentos, aplicarás ese conocimiento mediante la creación de algoritmos para manipular cadenas, factorizar números e incluso calcular la órbita de la Estación Espacial Internacional.
         En el camino, también aprenderá dos estilos o paradigmas de programación importantes: Programación Orientada a Objetos (OOP) y Programación Funcional (FP).
       </p>
+      <article class="card_item">
+        <div class="card_content">
+          <div class="card_text">
+              <h2 class="card_title"><a target="_" href="pages/javascript.html">JavaScript basico.</a></h2>
+              <p>Aprende lo basico sobre JavaScript</p>
+          </div>
+      </div>
+    </article>
+    article class="card_item">
+        <div class="card_content">
+          <div class="card_text">
+              <h2 class="card_title"><a target="_" href="pages/javascript.html">Aprende sobre ES6 </a></h2>
+              <p>ECMAScript, o ES, es una versión estandarizada de JavaScript. Debido a que todos los principales navegadores siguen esta especificación, los términos ECMAScript y JavaScript son intercambiables.
 
-
+                La mayor parte del JavaScript que ha aprendido hasta este punto estaba en ES5 (ECMAScript 5), que se finalizó en 2009. Si bien aún puede escribir programas en ES5, JavaScript está en constante evolución y cada año se lanzan nuevas funciones.
+                
+                ES6, lanzado en 2015, agregó muchas funciones nuevas y potentes al lenguaje. En este curso, aprenderá estas nuevas funciones, incluidas las funciones de flecha, la desestructuración, las clases, las promesas y los módulos.</p>
+          </div>
+      </div>
+    </article>
 </body>
 </html>
