--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <article class=introduccion>
         <p>
           Genios Studios es una empresa de desarrollo web y de aplicaciones.
-          Nos encargamos de brindar cursos y herramientas para aprender el desarrollo web y de aplicaciones.
+          <br>
+          Nos encargamos de brindar cursos y herramientas para aprender desarrollo web y de aplicaciones.
+          <br>
           No necesitas saber nada sobre programacion, nosotros te brindaremos todos los cursos necesarios.
         </p>
       </article>
@@ -34,7 +36,7 @@
       <article class="card_item">
         <div class="card_content">
           <figure class="card_picture">
-            <img src="images/htmlcss.jfif" class="card_img" alt="">
+            <img src="images/html_css.png" class="card_img" alt="">
           </figure>
           <div class="card_text">
             <h2 class="card_title">HTML y CSS</h2>
@@ -43,20 +45,20 @@
         </div>
         </article>
         <article class="card_item">
-          <div class="card_content">
+          <div class="card_content">  
             <figure class="card_picture">
-              <img src="images/javascript.jfif" class="card_img" alt="">
+              <img src="images/javascript.png" class="card_img javascript" alt="">
             </figure>
             <div class="card_text">
                 <h2 class="card_title"><a target="_" href="pages/javascript.html">JavaScript</a></h2>
-                <p>Aprende lo basico sobre JavaScript</p>
+                <p>Aprende sobre JavaScript</p>
             </div>
         </div>
       </article>
       <article class="card_item">
         <div class="card_content">
           <figure class="card_picture">
-            <img src="images/Java.png" class="card_img" alt="">
+            <img src="images/Java.png" class="card_img java" alt="">
           </figure>
           <div class="card_text">
             <h2 class="card_title">Java</h2>
@@ -67,7 +69,7 @@
       <article class="card_item">
         <div class="card_content">
           <figure class="card_picture">
-            <img src="images/htmlcss.jfif" class="card_img" alt="">
+            <img src="images/python.png" class="card_img python" alt="">
           </figure>
           <div class="card_text">
             <h2 class="card_title">Python</h2>
