--- a/pages/html_y_css.html
+++ b/pages/html_y_css.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 <body>
-    <nav id="navbar">
-        <h1>Genios Studios</h1>
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="#acerca_de_nosotros">Acerca de nosotros</a></li>
-          <li><a href="#contactanos">Contactanos</a></li>
-          <li><a href="#registrate">Registrate</a></li>
-          <li><a href="#inicia_sesion">Inicia Sesion</a></li>
-        </ul>
-    </nav>
+    <header class="header">
+        <h1 class="nav_tittle">Genios Studios</h1>
+        <nav id="navbar">
+          <ul class="nav-links">
+            <li class="left"><a href="../index.html">Inicio</a></li>
+            <li class="left"><a target="_blank" href="#acerca_de_nosotros">Acerca de nosotros</a></li>
+            <li class="left"><a target="_blank" href="#contactanos">Contactanos</a></li>
+            <li class="right"><a target="_blank" href="#registrate">Registrate</a></li>
+            <li class="right"><a target="_blank" href="#inicia_sesion">Inicia Sesion</a></li>
+          </ul>
+        </nav>
+      </header>
     <article>
         <h1>Aprende Html creando una pagina de gatos.</h1>
         <p>Las etiquetas HTML le dan a una página web su estructura. Puede usar etiquetas HTML para agregar fotos, botones y otros elementos a su página web.
