--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -20,16 +20,17 @@
       </ul>
     </nav>
   </header>
-  <section class="main-section" id="introduccion">
-    <h1>JavaScript</h1>
+  <section class="main-section">
     <article class=introduccion>
+      <h1>JavaScript</h1>
       <p> 
         JavaScript Se utiliza para que sea interactivo. En la Certificación de estructuras de datos y algoritmos de JavaScript, aprenderá los fundamentos de JavaScript, incluidas variables, matrices, objetos, bucles y funciones.
         Una vez que domines los fundamentos, aplicarás ese conocimiento mediante la creación de algoritmos para manipular cadenas, factorizar números e incluso calcular la órbita de la Estación Espacial Internacional.
         En el camino, también aprenderá dos estilos o paradigmas de programación importantes: Programación Orientada a Objetos (OOP) y Programación Funcional (FP).
       </p>
+      <a target="_" href="">Haz click aqui para empezar</a>
     </article>
-      <article>
+    <article >
         <h2><a target="_" href="">JavaScript basico.</a></h2>
         <p>Aprende lo basico sobre JavaScript</p>
     </article>
@@ -37,8 +38,10 @@
       <h2 ><a target="_" href="">Aprende sobre ES6 </a></h2>
       <p>ECMAScript, o ES, es una versión estandarizada de JavaScript. Debido a que todos los principales navegadores siguen esta especificación, los términos ECMAScript y JavaScript son intercambiables.
         La mayor parte del JavaScript que ha aprendido hasta este punto estaba en ES5 (ECMAScript 5), que se finalizó en 2009. Si bien aún puede escribir programas en ES5, JavaScript está en constante evolución y cada año se lanzan nuevas funciones.
-        ES6, lanzado en 2015, agregó muchas funciones nuevas y potentes al lenguaje. En este curso, aprenderá estas nuevas funciones, incluidas las funciones de flecha, la desestructuración, las clases, las promesas y los módulos.</p>
-      </article>
+        ES6, lanzado en 2015, agregó muchas funciones nuevas y potentes al lenguaje. En este curso, aprenderá estas nuevas funciones, incluidas las funciones de flecha, la desestructuración, las clases, las promesas y los módulos.
+      </p>
+      <a target="_" href="">Haz click aqui para empezar</a>
+    </article>
   </section>
 </body>
 </html>
