--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
       </nav>
     </header>
-    <section class="main-section" id="introduccion">
+    <section class="main-section">
       <h1>Genius Studios</h1>
       <article class=introduccion>
         <p>
@@ -36,10 +36,11 @@
       <article class="card_item">
         <div class="card_content">
           <figure class="card_picture">
+            <a target="_" href="pages/html_y_css.html">
             <img src="images/html_css.png" class="card_img" alt="">
           </figure>
           <div class="card_text">
-            <h2 class="card_title">HTML y CSS</h2>
+            <h2 class="card_title">HTML y CSS</a></h2>
             <p>Aprende todo sobre HTML y CSS.</p>
           </div>
         </div>
@@ -47,10 +48,11 @@
         <article class="card_item">
           <div class="card_content">  
             <figure class="card_picture">
+              <a target="_" href="pages/javascript.html">
               <img src="images/javascript.png" class="card_img javascript" alt="">
             </figure>
             <div class="card_text">
-                <h2 class="card_title"><a target="_" href="pages/javascript.html">JavaScript</a></h2>
+                <h2 class="card_title">JavaScript</a></h2>
                 <p>Aprende sobre JavaScript</p>
             </div>
         </div>
